# SP500-RandomForest

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
include/: DecisionTree.hpp  RandomForest.hpp
python/: data_loader.py  main.py  main_notebook.ipynb
src/: DecisionTree.cpp  RandomForest.cpp  bindings.cpp
tests/: Makefile  run_tests  test_main.cpp
